
	* error.c (cb_syntax_check, cb_syntax_check_x): add variants of
	  cb_{error,warning}[_x] functions with explicit va_list, and new helper
	  functions to dispach to errors or warnings w.r.t
	  cb_relaxed_syntax_checks
	* scanner.l, parser.l: make Area A enforcement raise errors instead of
	  warnings on strict dialects
	* parser.y: add missing Area A check on SELECT and CD

2022-09-20  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (examine_format_variant): fix compiler warning

2022-09-15  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	FR #360 AREACHECK
	FR #309 raise warnings/errors when some periods are missing
	* config.def: add dialect options areacheck and missing-period
	* pplex.l, scanner.l, parser.y: check for empty Area A, and use a
	  dedicated *_IN_AREA_A tokens to detect missing periods and incorrect
	  use of Area A
	* pplex.l, scanner.l, parser.y: support AREACHECK and NOAREACHECK
	  directives
	* pplex.l (cobc_has_areacheck_directive): new helper function
	* pplex.l (count_newlines): new helper function
	* parser.y (check_area_a, check_non_area_a): new functions for Area A
	  checks
	* parser.y (begin_statement): check statement does not start in Area A
	* parser.y: support some missing periods

2022-09-01  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	FR #18 support EXAMINE statement
	* parser.y: add missing options for EXAMINE statement

2022-08-26  Simon Sobisch <simonsobisch@gnu.org>

	* scanner.l (copy_literal): inlined into literal handling and added
	  missing check for actual literal, fixing bug #773
	* tree.c, tree.h, cobc.c: moved cobc_enum_explain from cobc.c to
	  tree.c as cb_enum_explain
	* tree.h (CB_TREE_TAG_UNEXPECTED_ABORT), field.c, tree.c, typeck.c,
	  codegen.c: added new macro and using it
	* field.c (cb_validate_88_item): check against numeric for all type of
	  values, not only the figurative constants
	* cobc.c, error.c: adjusted message handling to use local buffers